<resources>
    <string name="app_name">Trying_calendar</string>
    <string name="today_s_date">today\'s date</string>
    <string name="weekly_schedule">Weekly Schedule</string>
    <string name="daily_schedule">Daily Schedule</string>
    <string name="welcome">Welcome!</string>
    <string name="title">Title</string>
    <string name="date_of_event">date of event</string>
    <string name="events_pop_up">Events Pop Up</string>
    <string name="event_title_semicolon">Event Title: </string>
    <string name="event_title">Event Title</string>
    <string name="ddmmyy_semicolon">ddmmyy: </string>
    <string name="ddmmyyyy">dd/mm/yyyy </string>
    <string name="enter_details">enter details</string>
    <string name="ok">OK</string>
    <string name="event_title_hint">enter event title</string>
    <string name="enter_ddmmyyyy">enter ddmmyyyy</string>
    <string name="details">Details</string>
    <string name="details_semicolon">Details:</string>
    <string name="todo">TODO</string>
    <string name="from">From: </string>
    <string name="to">to</string>
    <string name="_00_00">00:00</string>
    <string name="create_an_event">Create An Event</string>
    <string name="news_feed">News Feed</string>
    <string name="calendar">Calendar</string>
    <string name="packages">Packages</string>
    <string name="go_to_calendar">Go To Calendar</string>
    <string name="create_packages">Create Packages</string>
    <string name="create_event">Create Event</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="main_text2">Click On Navigation Bar Below To Begin!</string>
    <string name="main_text1">This Is Your Calendar</string>
    <string name="etusernamehint">User Name(Email)</string>
    <string name="etpasswordhint">Password</string>
    <string name="btnsignintext">Sign in</string>
    <string name="tvsignup">New user? Sign up here!</string>
    <string name="tvloggedin">Welcome!</string>
    <string name="etsignupnamehint">Name</string>
    <string name="etsignupemailhint">Email</string>
    <string name="etsignupcodehint">Password</string>
    <string name="btnsignupcomplete">Sign Up</string>
    <string name="tvsignupbacktext">Already sign up? Sign in here!</string>
    <string name="btnsignouttext">Sign Out</string>
    <string name="logoutmenuname">Logout</string>
    <string name="settingsMenuname">Settings</string>
    <string name="refreshMenuname">Refresh</string>
    <string name="etsignupidnum">Student ID(length of 7)</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="weekday">Day of the Week</string>
    <string name="choose_start_date">Choose Start Date</string>
    <string name="choose_end_date">Choose End Date</string>
    <string name="choose_start_time">Choose Start Time</string>
    <string name="choose_end_time">Choose End Time</string>
    <string name="package_name">Package Name</string>
    <string name="invite_friends">Invite your friends below</string>
    <string name="remove_event">Remove Event</string>
    <string name="go_to_date">Go To Date</string>
</resources>
