<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Create_packages">

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_navigation"
        android:background="#CFDFFF">

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="70dp"
            android:scrollbarStyle="outsideInset"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="129dp">

            <LinearLayout
                android:id="@+id/packageLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/package_name"
                    android:textColor="#D8000000"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/packagname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:autofillHints=""
                    android:hint="@string/package_name"
                    android:inputType="textNoSuggestions" />

                <Switch
                    android:id="@+id/freetimeswitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5sp"
                    android:text="Set As Free Time     "
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/packages_community"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp" />

                <TextView
                    android:id="@+id/start_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/choose_start_date"
                    android:textColor="#D8000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/end_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/choose_end_date"
                    android:textColor="#D8000000"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/packageday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:entries="@array/weekday"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:prompt="@string/weekday"
                    android:textColor="#D8000000"

                    />

                <TextView
                    android:id="@+id/start_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/choose_start_time"
                    android:textColor="#D8000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/end_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="10dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/choose_end_time"
                    android:textColor="#D8000000"
                    android:textSize="18sp" />

            </LinearLayout>

        </ScrollView>

    </FrameLayout>

    <Button
        android:id="@+id/create_packages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:background="#FFFFFF"
        android:text="@string/ok"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="start"
        app:menu="@menu/navigation"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="#FFFFFF"
        />

</androidx.constraintlayout.widget.ConstraintLayout>