<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <EditText
        android:id="@+id/etsignupname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/etsignupnamehint"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etsignupemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/etsignupemailhint"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etsignupname"
        app:layout_constraintTop_toBottomOf="@+id/etsignupname" />

    <EditText
        android:id="@+id/etsignupcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/etsignupcodehint"
        android:inputType="textPassword"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etsignupidnum" />

    <Button
        android:id="@+id/btnsignupcomplete"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:background="@android:color/holo_purple"
        android:text="@string/btnsignupcomplete"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.847" />

    <TextView
        android:id="@+id/tvsignupback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvsignupbacktext"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.903" />

    <EditText
        android:id="@+id/etsignupidnum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/etsignupidnum"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etsignupemail" />


    <RadioGroup
        android:id="@+id/rgrolesel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rgpillarsel"
        app:layout_constraintTop_toBottomOf="@+id/etsignupcode">

        <TextView
            android:id="@+id/tvrolesel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Position/Role"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.102"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.543" />


        <RadioButton
            android:id="@+id/btnstudent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="Student"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/btnStudentAdmin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.101"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <RadioButton
            android:id="@+id/btnStudentAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Student Admin"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/btnFaculty"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.102"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioButton
            android:id="@+id/btnFaculty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="184dp"
            android:text="Faculty"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.105"
            app:layout_constraintStart_toStartOf="parent" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/rgpillarsel"
        android:layout_width="158dp"
        android:layout_height="314dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etsignupcode">

        <TextView
            android:id="@+id/tvPillar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Pillar"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/btnFreshmore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Freshmore"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/btnISTD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ISTD"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/btnEPD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="EPD"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/btnESD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ESD"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/btnASD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ASD"
            android:textSize="16sp" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>